Collectors from PA-RCA move.
Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>